# AnaPPTAgent

./: .gitignore  LICENCE  README.md  README_en.md  README_zh.md  mkdocs.yml  overview.md  pyproject.toml  ruff.toml
.github/workflows/: mkdocs.yml
docs/: README_en.md  README_zh.md  cli-usage.en.md  cli-usage.md  configuration.en.md  configuration.md  index.md  installation.en.md  installation.md  ppt-workflow.en.md  ppt-workflow.md  report-workflow.en.md  report-workflow.md  tui-usage.en.md  tui-usage.md
docs/superpowers/specs/: 2026-07-17-anappt-design.md  2026-07-17-anappt-implementation-plan.md
scripts/: setup-unix.sh  setup-windows.ps1
src/anappt/: __init__.py  cli.py  conversation.py  i18n.py  orchestrator.py  project.py  stage_base.py  tui.py  types.py
src/anappt/bridge/: dashi_ppt.py
src/anappt/io/: __init__.py  config.py  data_loader.py  git_auto.py  memory.py  session.py  skill_manager.py  state.py
src/anappt/llm/: models.py  provider.py
src/anappt/locales/: en.json  zh.json
src/anappt/stages/: __init__.py  s1_topic.py  s2_data_req.py  s3_data_load.py  s4_analysis.py  s5_report.py  s6_ppt.py
src/anappt/tools/: agent_loop.py  code_exec.py  web_fetch.py  web_search.py
templates/project/: .gitignore.tmpl  report.yaml.tmpl
templates/project/data/: README.md.tmpl
tests/: conftest.py  test_cli.py  test_conversation.py  test_i18n.py  test_orchestrator.py  test_project.py  test_stage_base.py  test_tui.py  test_types.py
tests/bridge/: test_dashi_ppt.py
tests/cli/: test_init_skill_download.py  test_setup.py
tests/integration/: conftest.py  test_full_pipeline.py  test_resume.py
tests/io/: test_config.py  test_data_loader.py  test_git_auto.py  test_memory.py  test_session.py  test_state.py
tests/llm/: test_provider.py  test_provider_stream.py
tests/stages/: test_all_stage_tools_memory.py  test_s1_topic.py  test_s2_data_req.py  test_s3_data_load.py  test_s4_analysis.py  test_s5_report.py  test_s6_ppt.py
tests/tools/: test_agent_loop.py  test_code_exec.py  test_web_fetch.py  test_web_search.py
