[project]
name = "anappt"
version = "0.2.0"
description = "AnaPPTAgent - Analysis report writing and PPT auto-generation agent tool"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "litellm",
    "pyyaml",
    "rich",
    "pandas",
    "polars",
    "duckdb",
    "httpx",
    "pydantic",
    "ddgs",
    "openpyxl",
    "pyarrow",
]

[project.urls]
Homepage = "https://sidneylyzhang.github.io/AnaPPTAgent/"
Documentation = "https://sidneylyzhang.github.io/AnaPPTAgent/"
Repository = "https://github.com/SidneyLYZhang/AnaPPTAgent.git"
Issues = "https://github.com/SidneyLYZhang/AnaPPTAgent/issues"
Changelog = "https://github.com/SidneyLYZhang/AnaPPTAgent/blob/master/CHANGELOG.md"

[project.scripts]
anappt = "anappt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anappt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["anappt"]

[tool.coverage.report]
fail_under = 80
